--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,11 @@
                     <descriptorRefs>
                         <descriptorRef>jar-with-dependencies</descriptorRef>
                     </descriptorRefs>
+                    <archive>
+                        <manifest>
+                            <mainClass>com.realcomp.mvr.hadoop.MVRBuild</mainClass>
+                        </manifest>
+                    </archive>
                 </configuration>
                 <executions>
                     <execution>
@@ -39,6 +44,16 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>com.bazaarvoice.maven.plugins</groupId>
+                <artifactId>s3-upload-maven-plugin</artifactId>
+                <version>1.3</version>
+                <configuration>
+                    <bucketName>rc-build-java</bucketName>
+                    <source>target/${project.artifactId}-${project.version}-jar-with-dependencies.jar</source>
+                    <destination>${project.artifactId}-${project.version}-jar-with-dependencies.jar</destination>
+                </configuration>
             </plugin>
         </plugins>
     </build>
@@ -78,6 +93,23 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>2.7.6</version>
+        </dependency>
+        <dependency>
+            <groupId>com.realcomp.data</groupId>
+            <artifactId>realcomp-data-hadoop</artifactId>
+            <version>0.4.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-common</artifactId>
+            <version>2.7.2</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-mapreduce-client-app</artifactId>
+            <version>2.7.2</version>
+            <type>jar</type>
         </dependency>
     </dependencies>
     <distributionManagement>
