--- a/pom.xml
+++ b/pom.xml
@@ -3,10 +3,48 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
-    <groupId>com.realcomp.data</groupId>
+    <groupId>com.real-comp</groupId>
     <artifactId>mvr-common</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <name>mvr-common</name>
+    <url>https://github.com/real-comp/mvr-common</url>
+    <description>An collection of POJOs dealing with Vehicles and Vehicle Titles.</description>
+    <organization>
+        <name>Real-Comp</name>
+        <url>http://www.real-comp.com</url>
+    </organization>
+    <developers>
+        <developer>
+            <id>krenfro</id>
+            <name>Kyle Renfro</name>
+            <email>kylerenfro@gmail.com</email>
+        </developer>
+    </developers>
+    <licenses>
+        <license>
+            <name>Apache License, Version 2.0</name>
+            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+            <comments>A business-friendly OSS license</comments>
+        </license>
+    </licenses>
+    <scm>
+        <connection>scm:git:git@github.com:real-comp/mvr-common.git</connection>
+        <developerConnection>scm:git:git@github.com:real-comp/mvr-common.git</developerConnection>
+        <url>git@github.com:real-comp/mvr-common.git</url>
+        <tag>HEAD</tag>
+    </scm>
+    <distributionManagement>
+        <snapshotRepository>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+        <repository>
+            <id>ossrh</id>
+            <name>Nexus Staging Repository</name>
+            <url>http://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+        </repository>
+    </distributionManagement>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
@@ -23,60 +61,91 @@
                 </configuration>
             </plugin>
             <plugin>
-                <artifactId>maven-assembly-plugin</artifactId>
-                <version>2.4</version>
+                <groupId>org.sonatype.plugins</groupId>
+                <artifactId>nexus-staging-maven-plugin</artifactId>
+                <version>1.6.3</version>
+                <extensions>true</extensions>
                 <configuration>
-                    <descriptorRefs>
-                        <descriptorRef>jar-with-dependencies</descriptorRef>
-                    </descriptorRefs>
-                    <archive>
-                        <manifest>
-                            <mainClass>com.realcomp.mvr.hadoop.MVRBuild</mainClass>
-                        </manifest>
-                    </archive>
+                    <serverId>ossrh</serverId>
+                    <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
                 </configuration>
-                <executions>
-                    <execution>
-                        <id>jar-with-dependencies</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>single</goal>
-                        </goals>
-                    </execution>
-                </executions>
             </plugin>
             <plugin>
-                <groupId>com.bazaarvoice.maven.plugins</groupId>
-                <artifactId>s3-upload-maven-plugin</artifactId>
-                <version>1.3</version>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>2.5</version>
                 <configuration>
-                    <bucketName>rc-build-java</bucketName>
-                    <source>target/${project.artifactId}-${project.version}-jar-with-dependencies.jar</source>
-                    <destination>${project.artifactId}-${project.version}-jar-with-dependencies.jar</destination>
+                    <autoVersionSubmodules>true</autoVersionSubmodules>
+                    <useReleaseProfile>false</useReleaseProfile>
+                    <releaseProfiles>release</releaseProfiles>
+                    <goals>deploy</goals>
                 </configuration>
             </plugin>
         </plugins>
     </build>
+    <profiles>
+        <profile>
+            <id>release</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-gpg-plugin</artifactId>
+                        <version>1.6</version>
+                        <executions>
+                            <execution>
+                                <id>sign-artifacts</id>
+                                <phase>verify</phase>
+                                <goals>
+                                    <goal>sign</goal>
+                                </goals>
+                                <configuration>
+                                    <keyname>277117C3</keyname>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-source-plugin</artifactId>
+                        <version>3.0.1</version>
+                        <executions>
+                            <execution>
+                                <id>attach-sources</id>
+                                <goals>
+                                    <goal>jar-no-fork</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-javadoc-plugin</artifactId>
+                        <version>2.10.4</version>
+                        <executions>
+                            <execution>
+                                <id>attach-javadocs</id>
+                                <goals>
+                                    <goal>jar</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
     <dependencies>
         <dependency>
-            <groupId>com.realcomp.data</groupId>
-            <artifactId>realcomp-data</artifactId>
-            <version>0.4.1</version>
+            <groupId>com.real-comp</groupId>
+            <artifactId>prime</artifactId>
+            <version>0.5.0</version>
         </dependency>
         <dependency>
-            <groupId>com.realcomp.address</groupId>
+            <groupId>com.real-comp</groupId>
             <artifactId>address-common</artifactId>
-            <version>0.1.3</version>
-        </dependency>
-        <dependency>
-            <groupId>com.realcomp.accuzip</groupId>
-            <artifactId>accuzip-common</artifactId>
-            <version>3.0.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>com.realcomp</groupId>
-            <artifactId>lockstep</artifactId>
-            <version>0.0.4</version>
+            <version>0.2.0</version>
         </dependency>
         <dependency>
             <groupId>org.jetbrains</groupId>
@@ -94,37 +163,5 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.7.6</version>
         </dependency>
-        <dependency>
-            <groupId>com.realcomp.data</groupId>
-            <artifactId>realcomp-data-hadoop</artifactId>
-            <version>0.4.3</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.hadoop</groupId>
-            <artifactId>hadoop-common</artifactId>
-            <version>2.7.2</version>
-            <type>jar</type>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.hadoop</groupId>
-            <artifactId>hadoop-mapreduce-client-app</artifactId>
-            <version>2.7.2</version>
-            <type>jar</type>
-        </dependency>
     </dependencies>
-    <distributionManagement>
-        <repository>
-            <id>nexus</id>
-            <url>https://nexus.real-comp.com/nexus/content/repositories/releases</url>
-        </repository>
-        <snapshotRepository>
-            <id>nexus</id>
-            <url>https://nexus.real-comp.com/nexus/content/repositories/snapshots</url>
-        </snapshotRepository>
-    </distributionManagement>
-    <scm>
-        <connection>scm:git:ssh://git@bitbucket.org/real-comp/mvr-common.git</connection>
-        <developerConnection>scm:git:ssh://git@bitbucket.org/real-comp/mvr-common.git</developerConnection>
-        <url>https://bitbucket.org/real-comp/mvr-common</url>
-    </scm>
 </project>
